--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </head>
 
     <body>
-        <div class="container">
+        <div class="rhombus">
             <!-- 2. Dòng chữ Happy Birthday
             Nếu bạn muốn thêm chữ vào thì phải thay đổi css tương ứng cho nó -->
             <div class="balloon">
