--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 // 6. Lời nhắn hiện ra khi bấm vào tên hoặc avatar
                 swal({
                     title: "Lời nhắn", // Tiêu đề của popup
-                    text: "Chúc Sun sinh nhật vui vẻ, hạnh phúc luôn xinh đẹp nhé❤️", // Nội dung lời nhắn
+                    text: "Chúc Sun sinh nhật vui vẻ, hạnh phúc luôn xinh đẹp, mọi điều tốt lành và may mắn sẽ đến với Sun và sớm đc thử tay nghề siu đầu bếp hg nhaa❤️", // Nội dung lời nhắn
                     button: {
                         text: "😍️",
                     },
